base/bureaublad/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
spec:
  ports:
    - name: bureaublad-backend
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: bureaublad-backend
  type: ClusterIP
