base/bureaublad/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
spec:
  ports:
    - name: bureaublad-frontend
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
