base/bureaublad/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: bureaublad.apps.digilab.network
      http:
        paths:
          - path: /
            pathType: prefix
            backend:
              service:
                name: svc-frontend
                port:
                  number: 80
          - backend:
              service:
                name: service
                port:
                  number: 8080
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - bureaublad.apps.digilab.network
      secretName: bureaublad-tls
